--- a/source/less/form-page.less
+++ b/source/less/form-page.less
@@ -10,27 +10,12 @@
   font-family: "Open Sans", sans-serif;
   color: #283645;
 
-  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-color: #ffffff;
 }
 
 @media (min-width: @tablet-width) {
   .form-page {
-    width: 660px;
-
-    background-image: url("../img/bg-back-tablet@1x.jpg");
-    background-repeat: no-repeat;
-    background-position: center -100px;
-    background-size: 200% auto;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .form-page {
-    width: 1200px;
-
-    background-image: none;
-    background-color: transparent;
+    width: 100%;
   }
 }
 
