--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -133,10 +133,12 @@
 }
 
 .reviews__author-name {
-  margin-top: 45px;
+  margin-top: 41px;
+  margin-bottom: 10px;
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
+  font-style: normal;
   color: #000000;
 }
 
@@ -164,6 +166,7 @@
 }
 
 .reviews__toggles {
+  margin-top: 37px;
   display: flex;
   justify-content: center;
 }
@@ -177,8 +180,8 @@
 .reviews__toggle {
   .indent-reset();
   border: none;
-  width: 12px;
-  height: 12px;
+  width: 7px;
+  height: 7px;
   background-color: #bec2c7;
   border-radius: 50%;
 
@@ -186,10 +189,12 @@
 }
 
 .reviews__toggle:first-child {
+  box-sizing: content-box;
+  background-color: #ffffff;
   border: 3px solid #283645;
 }
 
 .reviews__toggle:nth-child(2) {
-  margin-left: 19px;
-  margin-right: 19px;
+  margin-left: 14px;
+  margin-right: 18px;
 }
