--- a/source/less/site-list.less
+++ b/source/less/site-list.less
@@ -35,11 +35,12 @@
 }
 
 .site-list__item {
-  .indent-reset();
+  padding: 15px 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 64px;
+
 
   border-top: 1px solid #485461;
   border-bottom: 1px solid #000000;
