--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -41,7 +41,7 @@
 .contacts__banner {
   .indent-reset();
   margin-top: 45px;
-  margin-bottom: 40px;
+  margin-bottom: 5px;
 
   font-size: 24px;
   line-height: 29px;
@@ -114,7 +114,8 @@
 
 .contacts__titles p {
   .indent-reset();
-  margin-bottom: 11px;
+  margin-top: 27px;
+  margin-bottom: 0px;
 
   font-size: 18px;
   line-height: 22px;
@@ -122,12 +123,16 @@
 }
 
 .contacts__titles a {
-  display: inline-block;
-  margin-bottom: 26px;
+  display: block;
+  //margin-bottom: 68px;
   font-size: 24px;
   line-height: 30px;
   font-weight: 300;
   color: #d22856;
+}
+
+.contacts__titles:last-child a {
+  margin-bottom: 40px;
 }
 
 .contacts__map {
@@ -135,4 +140,5 @@
   .indent-reset();
   border: none;
   width: 100%;
+  height: 200px;
 }
