--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -10,24 +10,34 @@
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center -62px;
-  background-size: content;
+  background-position: center -66px;
+  background-size: 320px auto;
   background-color: #283645;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
 }
 
 @media (min-width: @tablet-width) {
   .get-app {
+    padding: 0 20px;
     margin: 0 auto;
     min-height: 620px;
     width: 660px;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: flex-start;
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: center bottom;
-    background-size: content;
+    background-size: 1200px auto;
     background-color: transparent;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 }
 
@@ -40,20 +50,17 @@
     justify-content: flex-start;
     align-items: flex-start;
     background: none;
-    //border: 1px solid red;
   }
 }
 
 .get-app__content {
   .indent-reset();
-  //border: 1px solid red;
   margin-top: 400px;
   min-height: 270px;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  //align-items: center;
+  justify-content: flex-start;
   text-align: center;
   z-index: 1;
 
@@ -62,7 +69,7 @@
 
 @media (min-width: @tablet-width) {
   .get-app__content {
-    margin-top: 0;
+    margin-top: 90px;
     width: 300px;
     background-color: transparent;
   }
@@ -71,45 +78,40 @@
 @media (min-width: @desktop-width) {
   .get-app__content {
     margin: 0;
-    //margin-left: 10px;
   }
 }
 
 .get-app__image {
   .indent-reset();
   position: absolute;
-  width: 260px;
-  height: 290px;
+  width: 258px;
   left: 0;
-  bottom: 305px;
+  bottom: 275px;
   z-index: 1;
 }
 
 @media (min-width: @tablet-width) {
   .get-app__image {
-    width: 470px;
-    height: 548px;
-    left: 170px;
+    width: 700px;
+    left: 0;
     bottom: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
   .get-app__image {
-    width: 555px;
-    height: 545px;
-    left: 354px;
-    bottom: 0;
+    width: 1050px;
   }
 }
 
 .get-app__banner {
   .indent-reset();
-  padding: 16px 30px;
-  margin-top: 30px;
-  margin-bottom: 33px;
+  padding: 14px 0;
+  width: 100%;
+  margin-top: 23px;
+  margin-bottom: 34px;
 
-  font-size: 21px;
+  font-size: 18px;
   line-height: 18px;
   font-weight: 700;
   color: #ffffff;
@@ -119,6 +121,7 @@
   background-color: transparent;
   border: 4px solid #ffffff;
   border-radius: 50px 50px 50px 50px;
+  box-sizing: border-box;
 
   &:hover {
     background-color: #ffffff;
@@ -133,8 +136,8 @@
 
 @media (min-width: @tablet-width) {
   .get-app__banner {
-    margin-top: 40px;
-    margin-bottom: 46px;
+    margin-top: 0;
+    margin-bottom: 47px;
   }
 }
 
@@ -147,6 +150,7 @@
 
 .get-app__slogan {
   .indent-reset();
+  margin: 0 auto;
   display: none;
 
   font-size: 40px;
@@ -160,6 +164,7 @@
     display: flex;
     width: 200px;
     text-align: center;
+    margin-bottom: 32px;
   }
 }
 
@@ -173,18 +178,18 @@
 
 .get-app__environ {
   .indent-reset();
-  margin-bottom: 37px;
+  margin-bottom: 35px;
 
   font-size: 14px;
   line-height: 24px;
   font-weight: 300;
 }
 
-@media (min-width: @desktop-width) {
+@media (min-width: @tablet-width) {
   .get-app__environ {
     font-size: 18px;
 
-    margin-top: 20px;
+    margin-top: 16px;
     margin-bottom: 0;
   }
 }
