--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -78,6 +78,19 @@
   }
 }
 
+.main-nav__logo-image {
+  width: 75px;
+  height: 22px;
+  margin-bottom: 7px;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__logo-image {
+    width: 146px;
+    height: 40px;
+  }
+}
+
 .main-nav__list {
   width: 100%;
 }
@@ -124,7 +137,6 @@
   height: 4px;
 
   background-color: #ffffff;
-
   box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
 }
 
