--- a/source/less/packages.less
+++ b/source/less/packages.less
@@ -66,6 +66,9 @@
 
 .packages__header {
   .indent-reset();
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   height: 99px;
   width: 280px;
   text-align: center;
@@ -110,6 +113,8 @@
 }
 
 .packages__name {
+  .indent-reset();
+  margin-top: 15px;
   font-size: 18px;
   line-height: 30px;
   font-weight: 700;
@@ -123,10 +128,17 @@
   }
 }
 
+.packages__price {
+  .indent-reset();
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 300;
+}
+
 .packages__mark {
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 1px;
+  top: 0px;
 }
 
 .packages__hit {
@@ -135,7 +147,7 @@
 
   position: absolute;
   left: 12px;
-  top: 15px;
+  top: 13px;
 
   z-index: 1;
   transform: rotate(-45deg);
@@ -222,8 +234,19 @@
   }
 }
 
+.packages__image--yes {
+  width: 31px;
+  height: 23px;
+}
+
+.packages__image--no {
+  width: 28px;
+  height: 26px;
+  margin-bottom: 18px;
+}
+
 .packages__toggles {
-  margin-top: 35px;
+  margin-top: 33px;
   margin-bottom: 47px;
   display: flex;
   justify-content: center;
@@ -238,8 +261,8 @@
 .packages__toggle {
   .indent-reset();
   border: none;
-  width: 12px;
-  height: 12px;
+  width: 7px;
+  height: 7px;
   background-color: #bec2c7;
   border-radius: 50%;
 
@@ -247,7 +270,10 @@
 }
 
 .packages__toggle:nth-child(2) {
+  margin-left: 14px;
+  margin-right: 18px;
+
+  box-sizing: content-box;
+  background-color: #ffffff;
   border: 3px solid #283645;
-  margin-left: 19px;
-  margin-right: 19px;
 }
