--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -12,8 +12,12 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: center top;
-    background-size: content;
+    background-size: 2560px auto;
     background-color: transparent;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
 
