закончил с РР главной страницы

--- a/source/less/advanteges.less
+++ b/source/less/advanteges.less
@@ -26,18 +26,19 @@
 @media (min-width: @tablet-width) {
   .advanteges {
     width: 100%;
+    //border: 1px solid red;
 
     &::after {
       top: 239px;
-      background-position: top 10%;
+      background-position: top 500px;
     }
   }
 }
 
 @media (min-width: @desktop-width) {
   .advanteges::after {
-    top: 329px;
-    background-position: top 0;
+    top: 324px;
+    background-position: top 10%;
   }
 }
 
@@ -64,6 +65,7 @@
 @media (min-width: @desktop-width) {
   .advanteges__content {
     width: auto;
+    margin-top: 65px;
   }
 }
 
@@ -99,6 +101,7 @@
 
 @media (min-width: @desktop-width) {
   .advanteges__issue {
+    margin-top: 65px;
     font-size: 50px;
     line-height: 60px;
   }
@@ -133,7 +136,7 @@
     line-height: 60px;
 
     width: 450px;
-    margin-bottom: 104px;
+    margin-bottom: 79px;
   }
 }
 
@@ -174,7 +177,8 @@
     min-height: 560px;
     width: 940px;
     margin: 0 auto;
-
+    margin-top: -64px;
+    //border: 1px solid red;
     flex-direction: row;
     justify-content: space-between;
     align-items: stretch;
@@ -221,7 +225,10 @@
 @media (min-width: @desktop-width) {
   .advanteges__title {
     margin-bottom: 26px;
-    width: 150px;
+    width: 250px;
+
+    font-size: 30px;
+    line-height: 30px;
   }
 }
 
@@ -244,6 +251,7 @@
     justify-content: flex-end;
     align-items: center;
     text-align: center;
+    //border: 1px solid red;
 
     &:first-child {
       background-image: url("../img/iphone-screen-1-desktop@1x.png");
@@ -276,8 +284,10 @@
 
 @media (min-width: @desktop-width) {
   .advanteges__description {
-    width: 190px;
-    margin-bottom: 0;
+    width: 240px;
+
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
@@ -313,17 +323,26 @@
 @media (min-width: @tablet-width) {
   .advanteges__duration {
     width: 100%;
-    min-height: 300px;
-
     display: flex;
-    align-items: flex-end;
 
     background-color: #ffffff;
   }
 }
 
+@media (min-width: @desktop-width) {
+  .advanteges__duration {
+    width: 940px;
+    margin: 0 auto;
+
+    background-color: #f2f2f2;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .advanteges__duration-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     width: 300px;
 
     text-align: left;
@@ -341,34 +360,56 @@
 }
 
 .advanteges__time-effect {
+  .indent-reset();
+  margin-bottom: 11px;
+  margin-top: 34px;
   font-size: 30px;
   line-height: 36px;
   color: #000000;
   font-weight: 700;
 }
 
+@media (min-width: @desktop-width) {
+  .advanteges__time-effect {
+    margin-top: 98px;
+    margin-bottom: 22px;
+  }
+}
+
 .advanteges__research {
   .indent-reset();
-  margin-bottom: 12px;
+  margin-bottom: 7px;
 
   font-size: 14px;
   line-height: 24px;
 }
 
-@media (min-width: @desktop-width) {
-  .advanteges__duration {
-    width: 940px;
-    margin: 0 auto;
+@media (min-width: @tablet-width) {
+  .advanteges__research br {
+    display: none;
+  }
+}
 
-    background-color: #f2f2f2;
+@media (min-width: @desktop-width) {
+  .advanteges__research {
+    margin-bottom: 32px;
+
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
 .advanteges__duration-content {
-  margin-bottom: 100px;
-  margin-top: 60px;
+  margin-bottom: 96px;
+  margin-top: 58px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+}
+
+@media (min-width: @desktop-width) {
+  .advanteges__duration-content {
+    margin-bottom: 65px;
+  }
 }
 
 .advanteges__clock {
@@ -389,13 +430,20 @@
 
 @media (min-width: @desktop-width) {
   .advanteges__clock {
-    margin-right: 71px;
+    width: 299px;
+    height: 349px;
+    margin-top: 6px;
+    margin-right: 65px;
+    margin-left: -20px;
+
+    background-size: 100%;
   }
 }
 
 .advanteges__clock-time {
+  padding-top: 8px;
   width: 203px;
-  height: 203px;
+  height: 204px;
   box-sizing: border-box;
   border-radius: 50%;
   border: 14px solid #d22856;
@@ -410,9 +458,30 @@
   color: #d22856;
 }
 
+@media (min-width: @desktop-width) {
+  .advanteges__clock-time {
+    width: 254px;
+    height: 254px;
+
+    left: 23px;
+    bottom: 24px;
+
+    font-size: 120px;
+    line-height: 187px;
+
+    border-width: 18px;
+  }
+}
+
 .advanteges__more {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 30px;
   color: #d22856;
   text-decoration: underline;
+}
+
+@media (min-width: @desktop-width) {
+  .advanteges__more {
+    font-size: 18px;
+  }
 }
