--- a/source/less/copyright.less
+++ b/source/less/copyright.less
@@ -12,3 +12,15 @@
   margin-right: 15px;
   margin-top: 5px;
 }
+
+@media (min-width: @tablet-width) {
+  .copyright__text {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .copyright__text {
+    font-size: 18px;
+  }
+}
