--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -93,7 +93,7 @@
 @media (min-width: @tablet-width) {
   .get-app__image {
     width: 700px;
-    left: 0;
+    height: 550px;
     bottom: 0;
   }
 }
@@ -143,8 +143,10 @@
 
 @media (min-width: @desktop-width) {
   .get-app__banner {
-    margin-top: 49px;
-    margin-bottom: 66px;
+    margin-top: 51px;
+    margin-bottom: 71px;
+
+    font-size: 21px;
   }
 }
 
@@ -170,6 +172,7 @@
 
 @media (min-width: @desktop-width) {
   .get-app__slogan {
+    margin-bottom: 0;
     width: auto;
     font-size: 50px;
     line-height: 60px;
@@ -191,5 +194,11 @@
 
     margin-top: 16px;
     margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .get-app__environ {
+    margin-top: 33px;
   }
 }
