--- a/source/less/reviews.less
+++ b/source/less/reviews.less
@@ -12,7 +12,6 @@
     background-image: url("../img/bg-triangle-white.svg");
     background-repeat: no-repeat;
     background-size: 100%;
-    //background-color: red;
   }
 }
 
@@ -21,7 +20,6 @@
     width: 100%;
 
     &::after {
-      bottom: -150px;
       background-position: top 10%;
     }
   }
@@ -29,6 +27,7 @@
 
 @media (min-width: @desktop-width) {
   .reviews::after {
+    bottom: -150px;
     background-position: top 0;
   }
 }
@@ -49,7 +48,7 @@
   .reviews__content {
     margin: 0 auto;
     padding: 0;
-    width: 660px;
+    width: 620px;
     min-height: 247px;
   }
 }
@@ -57,7 +56,7 @@
 @media (min-width: @desktop-width) {
   .reviews__content {
     width: 940px;
-    min-height: 420px;
+    min-height: 404px;
 
     background-image: url("../img/icon-quotes.svg");
     background-repeat: no-repeat;
@@ -95,7 +94,7 @@
 @media (min-width: @desktop-width) {
   .reviews__wrapper {
     margin: 0 auto;
-    margin-top: 189px;
+    margin-top: 186px;
     width: 940px;
     flex-direction: row;
     justify-content: space-between;
@@ -118,14 +117,16 @@
 
 .reviews__previous,
 .reviews__next {
+  .indent-reset();
   display: none;
 }
 
 @media (min-width: @desktop-width) {
   .reviews__previous,
   .reviews__next {
+    margin-bottom: 90px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -145,23 +146,35 @@
 @media (min-width: @tablet-width) {
   .reviews__author-name {
     font-size: 20px;
-    margin-top: 37px;
+    margin-top: 35px;
+    margin-bottom: 8px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .reviews__author-name {
     font-size: 24px;
+    margin-bottom: 0;
   }
 }
 
 .reviews__author-is {
+  .indent-reset();
   display: none;
 }
 
 @media (min-width: @tablet-width) {
   .reviews__author-is {
     display: block;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .reviews__author-is {
+    display: block;
+
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
