--- a/source/less/packages.less
+++ b/source/less/packages.less
@@ -47,7 +47,7 @@
 @media (min-width: @desktop-width) {
   .packages__list {
     margin-bottom: 98px;
-    margin-top: 136px;
+    margin-top: 156px;
   }
 }
 
@@ -135,6 +135,18 @@
   font-weight: 300;
 }
 
+@media (min-width: @tablet-width) {
+  .packages__price {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .packages__price {
+    font-size: 24px;
+  }
+}
+
 .packages__mark {
   position: absolute;
   left: 1px;
@@ -164,6 +176,18 @@
   }
 }
 
+@media (min-width: @desktop-width) {
+  .packages__mark {
+    height: 70px;
+    left: -1px;
+    top: 0;
+  }
+
+  .packages__hit {
+    top: 8px;
+  }
+}
+
 .packages__item {
   .indent-reset();
   list-style: none;
@@ -176,7 +200,6 @@
     display: table-row;
   }
 }
-
 
 .packages__option {
   .indent-reset();
@@ -194,6 +217,30 @@
   border-bottom: 2px solid #e5e5e5;
 }
 
+@media (min-width: @tablet-width) {
+  .packages__option {
+    padding: 0;
+
+    width: 155px;
+    height: auto;
+    display: table-cell;
+
+    font-size: 14px;
+    line-height: 30px;
+    font-weight: 400;
+    text-transform: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .packages__option {
+    width: 235px;
+    height: 60px;
+    display: table-cell;
+    vertical-align: top;
+  }
+}
+
 .packages__option:first-child {
   .indent-reset();
   display: none;
@@ -202,22 +249,14 @@
 @media (min-width: @tablet-width) {
   .packages__option:first-child {
     display: table-cell;
+    padding-top: 7px;
     border-bottom: 2px solid #e5e5e5;
   }
 }
 
-@media (min-width: @tablet-width) {
-  .packages__option {
-    width: 155px;
-    height: 48px;
-    display: table-cell;
-  }
-}
-
 @media (min-width: @desktop-width) {
-  .packages__option {
-    width: 235px;
-    display: table-cell;
+  .packages__option:first-child {
+    padding-top: 15px;
   }
 }
 
@@ -230,7 +269,18 @@
 @media (min-width: @tablet-width) {
   .packages__option:first-child .packages__option-name {
     .indent-reset();
+    padding-left: 15px;
     display: flex;
+    align-items: flex-start;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .packages__option:first-child .packages__option-name {
+    padding-left: 23px;
+
+    font-size: 18px;
+    line-height: 30px;
   }
 }
 
@@ -239,10 +289,35 @@
   height: 23px;
 }
 
+@media (min-width: @tablet-width) {
+  .packages__image--yes {
+    margin: 0;
+    margin-top: 13px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .packages__image--yes {
+    margin-top: 15px;
+  }
+}
+
 .packages__image--no {
   width: 28px;
   height: 26px;
   margin-bottom: 18px;
+}
+
+@media (min-width: @tablet-width) {
+  .packages__image--no {
+    margin: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .packages__image--no {
+    margin-top: 13px;
+  }
 }
 
 .packages__toggles {
