--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -34,7 +34,8 @@
 
 @media (min-width: @desktop-width) {
   .page-footer__content {
-    width: 940px;
+    align-items: flex-start;
+    width: 980px;
     min-height: 225px;
   }
 }
@@ -42,4 +43,42 @@
 .page-footer__social {
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__social {
+    margin-right: 20px;
+    margin-top: 40px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__social {
+    margin-right: -5px;
+    margin-top: 74px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__copyright {
+    margin-top: 14px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__copyright {
+    margin-top: 83px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__logo-image {
+    margin-bottom: 16px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__logo-image {
+    margin-top: 69px;
+  }
 }
