--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -12,7 +12,7 @@
   min-height: 284px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
 
@@ -45,6 +45,10 @@
   margin-bottom: 40px;
 }
 
+.page-footer__social {
+  margin-top: 35px;
+}
+
 @media (min-width: @tablet-width) {
   .page-footer__social {
     margin-right: 20px;
@@ -71,8 +75,13 @@
   }
 }
 
+.page-footer__logo-image {
+  margin-top: 40px;
+}
+
 @media (min-width: @tablet-width) {
   .page-footer__logo-image {
+    margin-top: 0;
     margin-bottom: 16px;
   }
 }
