--- a/source/less/photo-page.less
+++ b/source/less/photo-page.less
@@ -24,10 +24,10 @@
 
 .photo-page__intro {
   display: flex;
+  align-items: flex-start;
   justify-content: center;
-  padding: 0;
-  min-height: 185px;
 
+  min-height: 163px;
   font-size: 14px;
   line-height: 30px;
   background-color: #ffffff;
@@ -47,7 +47,7 @@
 
 .photo-page__intro p {
   .indent-reset();
-  margin-top: 50px;
+  margin-top: 44px;
   width: 245px;
 }
 
