--- a/source/less/contacts.less
+++ b/source/less/contacts.less
@@ -1,28 +1,222 @@
 .contacts {
-  margin: 0;
-  padding: 0;
-  padding-left: 20px;
-  min-height: 615px;
-
+  .indent-reset();
   color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts {
+    background-color: #ffffff;
+  }
+}
+
+.contacts__content {
+  position: relative;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: flex-end;
   background-color: #ffffff;
-  background-image: url("../img/bg-map-mobile@1x.png");
-  background-repeat: no-repeat;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__content::after {
+    content: "";
+    position: absolute;
+    bottom: 304px;
+    width: 100%;
+    height: 70px;
+    z-index: 1;
+    background-image: url("../img/bg-triangle-white-footer.svg");
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: 100% 100%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__content {
+    width: 100%;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 401px;
+      width: 100%;
+      height: 100px;
+      z-index: 1;
+      background-image: url("../img/bg-triangle-white-footer.svg");
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+    }
+  }
+}
+
+.contacts__banner {
+  .indent-reset();
+  margin-top: 45px;
+  margin-bottom: 5px;
+
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 300;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__banner {
+    font-size: 40px;
+    line-height: 48px;
+
+    width: 500px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__banner {
+    margin-top: 62px;
+    font-size: 50px;
+    line-height: 60px;
+  }
 }
 
 .contacts__wrapper {
-  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding: 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__wrapper {
+    .indent-reset();
+    margin-bottom: 30px;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 600px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__wrapper {
+    .indent-reset();
+    align-items: flex-start;
+    width: 900px;
+    margin-top: 14px;
+
+    &::after {
+      background: none;
+    }
+  }
 }
 
 .contacts__titles {
+  width: 280px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__titles {
+    margin-top: 10px;
+    width: 280px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__titles {
+    width: 255px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__titles:last-child {
+    margin: 0 auto;
+    margin-top: 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__titles:last-child {
+    margin: 0 auto;
+    margin-top: 38px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__titles:nth-child(2) {
+    order: 1;
+  }
+}
+
+.contacts__titles p {
+  .indent-reset();
+  margin-top: 30px;
+  margin-bottom: 0;
+
   font-size: 18px;
   line-height: 22px;
   font-weight: 700;
+}
 
-  a {
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: 300;
-    color: #d22856;
+.contacts__titles:last-child p {
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__titles:last-child p {
+    margin-top: 0;
+  }
+}
+
+.contacts__titles a {
+  .indent-reset();
+  margin-bottom: -10px;
+  display: block;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 300;
+  color: #d22856;
+}
+
+.contacts__titles:last-child a {
+  margin-bottom: 40px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__titles:last-child a {
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__titles:last-child a {
+    margin-bottom: 23px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__titles a {
+    margin-top: 24px;
+  }
+}
+
+.contacts__map {
+  position: relative;
+  .indent-reset();
+  border: none;
+  width: 100%;
+  height: 200px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__map {
+    height: 373px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__map {
+    height: 500px;
   }
 }
