--- a/source/less/copyright.less
+++ b/source/less/copyright.less
@@ -1,6 +1,26 @@
 .copyright {
-  margin: 0;
-  padding: 0;
+  display: flex;
+  .indent-reset();
   background-color: #ffffff;
   color: #283645;
+}
+
+.copyright__text {
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  margin-right: 15px;
+  margin-top: 5px;
+}
+
+@media (min-width: @tablet-width) {
+  .copyright__text {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .copyright__text {
+    font-size: 18px;
+  }
 }
