--- a/source/less/get-app.less
+++ b/source/less/get-app.less
@@ -10,33 +10,43 @@
 
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center -62px;
-  background-size: content;
+  background-position: center -66px;
+  background-size: 320px auto;
   background-color: #283645;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
 }
 
 @media (min-width: @tablet-width) {
   .get-app {
+    padding: 0 20px;
     margin: 0 auto;
     min-height: 620px;
     width: 660px;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: flex-start;
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: center bottom;
-    background-size: content;
+    background-size: 1200px auto;
     background-color: transparent;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
   .get-app {
     padding: 0;
-    margin-top: 100px;
-    width: 940px;
-    min-height: 645px;
+    margin-top: 109px;
+    width: 947px;
+    min-height: 635px;
     justify-content: flex-start;
     align-items: flex-start;
     background: none;
@@ -50,8 +60,7 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
   text-align: center;
   z-index: 1;
 
@@ -60,13 +69,13 @@
 
 @media (min-width: @tablet-width) {
   .get-app__content {
-    margin-bottom: 100px; //not work
+    margin-top: 90px;
     width: 300px;
     background-color: transparent;
   }
 }
 
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
   .get-app__content {
     margin: 0;
   }
@@ -75,36 +84,32 @@
 .get-app__image {
   .indent-reset();
   position: absolute;
-  width: 260px;
-  height: 290px;
+  width: 258px;
   left: 0;
-  bottom: 305px;
+  bottom: 275px;
   z-index: 1;
 }
 
 @media (min-width: @tablet-width) {
   .get-app__image {
-    width: 470px;
-    height: 548px;
-    left: 170px;
+    width: 700px;
+    height: 550px;
     bottom: 0;
   }
 }
 
 @media (min-width: @desktop-width) {
   .get-app__image {
-    width: 555px;
-    height: 645px;
-    left: 344px;
-    bottom: 0;
+    width: 1050px;
   }
 }
 
 .get-app__banner {
   .indent-reset();
-  padding: 18px 34px;
-  margin-top: 30px;
-  margin-bottom: 33px;
+  padding: 14px 0;
+  width: 100%;
+  margin-top: 23px;
+  margin-bottom: 34px;
 
   font-size: 18px;
   line-height: 18px;
@@ -116,6 +121,7 @@
   background-color: transparent;
   border: 4px solid #ffffff;
   border-radius: 50px 50px 50px 50px;
+  box-sizing: border-box;
 
   &:hover {
     background-color: #ffffff;
@@ -124,26 +130,29 @@
 
   &:active {
     background-color: #ffffff;
-    color: rgba(210,40,86, 0.3);
+    color: rgba(210, 40, 86, 0.3);
   }
 }
 
 @media (min-width: @tablet-width) {
   .get-app__banner {
-    margin-top: 40px;
-    margin-bottom: 46px;
+    margin-top: 0;
+    margin-bottom: 47px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .get-app__banner {
-    margin-top: 60px;
-    margin-bottom: 66px;
+    margin-top: 51px;
+    margin-bottom: 71px;
+
+    font-size: 21px;
   }
 }
 
 .get-app__slogan {
   .indent-reset();
+  margin: 0 auto;
   display: none;
 
   font-size: 40px;
@@ -157,21 +166,39 @@
     display: flex;
     width: 200px;
     text-align: center;
+    margin-bottom: 32px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .get-app__slogan {
+    margin-bottom: 0;
+    width: auto;
+    font-size: 50px;
+    line-height: 60px;
   }
 }
 
 .get-app__environ {
   .indent-reset();
-  margin-bottom: 37px;
+  margin-bottom: 35px;
 
   font-size: 14px;
   line-height: 24px;
   font-weight: 300;
 }
 
+@media (min-width: @tablet-width) {
+  .get-app__environ {
+    font-size: 18px;
+
+    margin-top: 16px;
+    margin-bottom: 0;
+  }
+}
+
 @media (min-width: @desktop-width) {
   .get-app__environ {
-    margin-top: 60px;
-    margin-bottom: 0;
+    margin-top: 33px;
   }
 }
