--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -12,7 +12,7 @@
   min-height: 284px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
 
@@ -34,12 +34,56 @@
 
 @media (min-width: @desktop-width) {
   .page-footer__content {
-    width: 940px;
+    align-items: flex-start;
+    width: 980px;
     min-height: 225px;
   }
 }
 
 .page-footer__social {
-  margin-top: 40px;
+  margin-top: 35px;
   margin-bottom: 40px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__social {
+    margin-right: 20px;
+    margin-top: 40px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__social {
+    margin-right: -5px;
+    margin-top: 74px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__copyright {
+    margin-top: 14px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__copyright {
+    margin-top: 83px;
+  }
+}
+
+.page-footer__logo-image {
+  margin-top: 40px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-footer__logo-image {
+    margin-top: 0;
+    margin-bottom: 16px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer__logo-image {
+    margin-top: 69px;
+  }
 }
