--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -12,13 +12,17 @@
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: center top;
-    background-size: content;
+    background-size: 2560px auto;
     background-color: transparent;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
   }
 }
 
 .page-header__title {
-  padding-top: 36px;
+  padding-top: 30px;
   min-height: 171px;
 
   font-size: 24px;
@@ -43,7 +47,7 @@
 
     background-image: url("../img/bg-back-tablet@1x.jpg");
     background-repeat: no-repeat;
-    background-position: center -62px;
+    background-position: center -109px;
     background-size: content;
     background-color: #283645;
   }
